--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,5 +1,5 @@
 # Change these first
-owner: Vahry # Your GitHub organization or username, where this repository lives
+owner: DemuraAIdev # Your GitHub organization or username, where this repository lives
 repo: upmtimes # The name of this repository
 
 sites:
