--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,10 +3,14 @@ owner: DemuraAIdev # Your GitHub organization or username, where this repository
 repo: upmtimes # The name of this repository
 
 sites:
-  - name: Core
+  - name: vahryiskandar.my.id
     url: https://vahryiskandar.my.id/
   - name: Analytics
     url: http://umami.vahryiskandar.my.id/
+  - name: Demura
+    url: http://demura.vahryiskandar.my.id/
+  - name: Bin
+    url: http://bin.vahryiskandar.my.id/
 
   
 status-website:
